--- a/WCSTrainer/Pages/TrainingOrders/Conclude.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Conclude.cshtml
@@ -8,8 +8,8 @@
         <div class="side-bar">
             <div class="ul">
                 <a href=""><div class="li">Statistics</div></a>
-                <a href="TrainingOrders"><div class="selected">Training Orders</div></a>
-                <a href="Employees"><div class="li">Manage Employees</div></a>
+                <a asp-page="./Index"><div class="selected">Training Orders</div></a>
+                <a asp-page="./Index"><div class="li">Manage Employees</div></a>
                 <a href=""><div class="li">Account Settings</div></a>
             </div>
         </div>
@@ -35,6 +35,73 @@
                         <input asp-for="TrainingOrder.trainers" type="hidden"/>
                         <input asp-for="TrainingOrder.beginDate" type="hidden"/>
                         <input asp-for="TrainingOrder.endDate" type="hidden"/>
+
+                        @if (!Model.TrainingOrder.status.Equals("Awaiting Approval")) {
+                            <div class="text-group">
+                                <div class="identifier">
+                                    <p class="title">Trainers</p>
+                                </div>
+                                <div class="info-content">
+                                    @foreach (string trainer in Model.TrainingOrder.trainers) {
+                                        <p class="info">@trainer</p>
+
+                                    }
+                                </div>
+                            </div>
+                        }
+
+
+
+                        <div class="text-group">
+                            <div class="identifier">
+                                <p class="title">Trainee</p>
+                            </div>
+                            <div class="info-content">
+                                <p class="info">@Html.DisplayFor(model => model.TrainingOrder.trainee)</p>
+                            </div>
+                        </div>
+                        <div class="text-group">
+                            <div class="identifier">
+                                <p class="title">Skill</p>
+                            </div>
+                            <div class="info-content">
+                                <p class="info">@Html.DisplayFor(model => model.TrainingOrder.skill)</p>
+                            </div>
+                        </div>
+                        @if (!Model.TrainingOrder.status.Equals("Awaiting Approval")) {
+                            <div class="text-group">
+                                <div class="identifier">
+                                    <p class="title">Begin Date</p>
+                                </div>
+                                <div class="info-content">
+                                    <p class="info">@Html.DisplayFor(model => model.TrainingOrder.beginDate)</p>
+                                </div>
+                            </div>
+                            <div class="text-group">
+                                <div class="identifier">
+                                    <p class="title">End Date</p>
+                                </div>
+                                <div class="info-content">
+                                    <p class="info">@Html.DisplayFor(model => model.TrainingOrder.endDate)</p>
+                                </div>
+                            </div>
+                        }
+
+                        <br />
+
+                        <div class="form-group">
+                            <div class="labels">
+                                <p class="control-label">Closing Notes</p>
+                            </div>
+                            <textarea rows="5" /></textarea>
+                        </div>
+                        
+                        <div class="form-group">
+                            <div class="labels">
+                                <p class="control-label">How effective was the training?</p>
+                            </div>
+                            <textarea rows="5" /></textarea>
+                        </div>
 
                         <div class="form-group">
                             <input type="submit" value="Submit" class="btn btnGreen"/>
