--- a/WCSTrainer/Pages/Employees/Details.cshtml
+++ b/WCSTrainer/Pages/Employees/Details.cshtml
@@ -11,26 +11,16 @@
     <h4>Employee</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Employee.FirstName)</dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Employee.FirstName)</dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Employee.LastName)</dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Employee.LastName)</dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Employee.Status)</dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Employee.Status)</dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Employee.Trainings)</dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Employee.Trainings)</dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Employee.Availability)</dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Employee.Availability)</dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Employee.FirstName)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Employee.FirstName)</dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Employee.LastName)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Employee.LastName)</dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Employee.Status)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Employee.Status)</dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Employee.Trainings)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Employee.Trainings)</dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Employee.Availability)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Employee.Availability)</dd>
     </dl>
 </div>
 <div>
