--- a/WCSTrainer/Pages/Shared/_Layout.cshtml
+++ b/WCSTrainer/Pages/Shared/_Layout.cshtml
@@ -8,14 +8,15 @@
     <link rel="stylesheet" href="~/WCSTrainer.styles.css" asp-append-version="true" />
 </head>
 
+<nav>
+    <ul>
+        <li class="main-title">WCS Trainer</li>
+        <li><a asp-page="/Index">Home</a></li>
+        <li><a asp-page="TrainingOrders/Index">Admin Panel</a></li>
+        <li><a asp-page="TrainingOrders/Index">My Panel</a></li>
+    </ul>
+</nav>
 <body>
-    <nav>
-        <ul>
-            <li><a href="Home">WCS Trainer</a></li>
-            <li><a asp-page="TrainingOrders/Index">Home</a></li>
-            <li><a asp-page="TrainingOrders/Index">Admin Panel</a></li>
-        </ul>
-    </nav>
     <div class="content">
         @RenderBody()
     </div>
