--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -10,37 +10,52 @@
     user-select: none;
 }
 
+.main-title {
+    font-size: 20px;
+    margin-right: 40px;
+}
+
 nav {
     top: 0;
     display: flex;
     width: 100%;
     background-color: var(--gray2);
-    min-height: 60px;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
     margin-bottom: 50px;
 }
 
     nav ul {
         display: flex;
         flex-direction: row;
+        align-items: center;
         width: 1500px;
         max-width: 80%;
-        height: 100%;
+        height: 60px;
     }
 
     nav li {
         list-style: none;
         height: 100%;
+        display: flex;
+        align-items: center;
     }
 
         nav li a {
-            color: white;
-            margin-right: 30px;
+            display: flex;
+            align-items: center;
+            color: #bababa;
             font-size: 20px;
             text-decoration: none;
+            padding: 0 20px;
+            height: 100%;
+            width: 100%;
         }
+
+        nav li a:hover {
+            background-color: var(--gray3);
+            color: white;
+        }
+
 
 
 html {
@@ -148,7 +163,7 @@ body {
 
                 .panel .body .properties .user-form .title {
                     color: white;
-                    font-size: 40px;
+                    font-size: 30px;
                     margin-bottom: 40px;
                 }
                 .panel .body .properties .user-form .description {
@@ -276,7 +291,7 @@ body {
                     flex-direction: row;
                     padding: 5px 0;
                     width: 75%;
-                    border-bottom: 1px solid gray;
+                    border-bottom: 1px solid #45494e;
                 }
                     .panel .body .properties .user-form .field-container .text-group .identifier {
                         height: 100%;
