--- a/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
@@ -32,19 +32,12 @@
                         <input asp-for="TrainingOrder.trainee" type="hidden" />
                         <input asp-for="TrainingOrder.medium" type="hidden" />
                         <input asp-for="TrainingOrder.skill" type="hidden" />
-                        
-                        
-                        
-                        
-                        
-                        
-                        
 
                         <div class="form-group">
 
                             <div class="labels">
                                 <p class="control-label">Trainers</p>
-                                <span asp-validation-for="TrainingOrder.trainers" class="text-danger"></span>
+                                <p id="trainerDanger" class="text-danger" style="display: none;">Please select at least one trainer.</p>
                             </div>
                             <div class="selections">
                                 <ul id="trainerList">
@@ -119,6 +112,7 @@
     var indiList = document.getElementById("indiList");
     var testList = document.getElementById("testList");
     var groups = document.getElementById("groups");
+    var trainerDanger = document.getElementById("trainerDanger");
   
     indiButton.addEventListener("click", function () {
         if (individual.style.display == "flex") {
@@ -181,6 +175,33 @@
         });
         trainersInput.value = trainers.join(", ");
     }
+
+
+    // Function to enable or disable the submit button based on the trainers list
+    function toggleSubmitButton() {
+        var submitButton = document.querySelector('input[type="submit"]');
+        if (trainList.getElementsByTagName("li").length > 0) {
+            submitButton.disabled = false;
+        } else {
+            submitButton.disabled = true;
+            trainerDanger.style.display = "none";
+        }
+    }
+
+    trainList.addEventListener("DOMNodeInserted", toggleSubmitButton);
+    trainList.addEventListener("DOMNodeRemoved", toggleSubmitButton);
+
+    // Function to validate the form before submission
+    function validateForm(event) {
+        if (trainList.getElementsByTagName("li").length === 0) {
+            event.preventDefault();
+            trainerDanger.style.display = "block";
+        }
+    }
+
+    // Add event listener to form submission
+    document.querySelector('form').addEventListener("submit", validateForm);
+
 </script>
 
 @section Scripts {
