--- a/WCSTrainer/Pages/TrainingOrders/AllView.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/AllView.cshtml
@@ -7,12 +7,12 @@
 <div class="panel">
     <div class="body">
         <div class="side-bar">
-            <div class="ul">
-                <a href=""><div class="li">Statistics</div></a>
-                <a asp-page="./Index"><div class="selected">Training Orders</div></a>
-                <a asp-page="./Index"><div class="li">Manage Employees</div></a>
-                <a href=""><div class="li">Account Settings</div></a>
-            </div>
+            <ul>
+                <a href="">Statistics</a>
+                <a asp-page="./Index" class="selected">Training Orders</a>
+                <a asp-page="./Index">Manage Employees</a>
+                <a href="">Account Settings</a>
+            </ul>
         </div>
         <div class="properties">
             <div class="order-list2">
@@ -29,7 +29,6 @@
                         <th>Skill</th>
                         <th>Begin Date</th>
                         <th>End Date</th>
-                        <th>Location</th>
                     </tr>
                     @foreach (var item in Model.TrainingOrder) {
                         <tr class="clickable">
@@ -39,7 +38,6 @@
                             <td>@Html.DisplayFor(modelItem => item.skill)</td>
                             <td>@Html.DisplayFor(modelItem => item.beginDate)</td>
                             <td>@Html.DisplayFor(modelItem => item.endDate)</td>
-                            <td>@Html.DisplayFor(modelItem => item.location)</td>
                         </tr>
                     }
                 </table>
@@ -77,4 +75,5 @@
             }
         }
     }
+
 </script>
