--- a/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
@@ -7,12 +7,12 @@
 <div class="panel">
     <div class="body">
         <div class="side-bar">
-            <div class="ul">
-                <a href=""><div class="li">Statistics</div></a>
-                <a asp-page="./Index"><div class="selected">Training Orders</div></a>
-                <a asp-page="./Index"><div class="li">Manage Employees</div></a>
-                <a href=""><div class="li">Account Settings</div></a>
-            </div>
+            <ul>
+                <a href="">Statistics</a>
+                <a asp-page="./Index" class="selected">Training Orders</a>
+                <a asp-page="./Index">Manage Employees</a>
+                <a href="">Account Settings</a>
+            </ul>
         </div>
         <div class="properties">
             <div class="user-form">
