--- a/WCSTrainer/Pages/TrainingOrders/Conclude.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Conclude.cshtml
@@ -6,12 +6,12 @@
 <div class="panel">
     <div class="body">
         <div class="side-bar">
-            <div class="ul">
-                <a href=""><div class="li">Statistics</div></a>
-                <a asp-page="./Index"><div class="selected">Training Orders</div></a>
-                <a asp-page="./Index"><div class="li">Manage Employees</div></a>
-                <a href=""><div class="li">Account Settings</div></a>
-            </div>
+            <ul>
+                <a href="">Statistics</a>
+                <a asp-page="./Index" class="selected">Training Orders</a>
+                <a asp-page="./Index">Manage Employees</a>
+                <a href="">Account Settings</a>
+            </ul>
         </div>
 
         <div class="properties">
@@ -37,7 +37,6 @@
                         <input asp-for="TrainingOrder.skill" type="hidden" />
 
                         <input asp-for="TrainingOrder.status" type="hidden" value="Completed" />
-                        
 
                         @if (!Model.TrainingOrder.status.Equals("Awaiting Approval")) {
                             <div class="text-group">
