--- a/WCSTrainer/Pages/Employees/Index.cshtml
+++ b/WCSTrainer/Pages/Employees/Index.cshtml
@@ -8,12 +8,12 @@
 <div class="panel">
     <div class="body">
         <div class="side-bar">
-            <div class="ul">
-                <a href=""><div class="li">Statistics</div></a>
-                <a href="TrainingOrders"><div class="li">Training Orders</div></a>
-                <a asp-page="./Index"><div class="selected">Manage Employees</div></a>
-                <a href=""><div class="li">Account Settings</div></a>
-            </div>
+            <ul>
+                <a href="">Statistics</a>
+                <a href="TrainingOrders">Training Orders</a>
+                <a href="Employees" class="selected">Manage Employees</a>
+                <a href="">Account Settings</a>
+            </ul>
         </div>
         <div class="properties">
             <div class="order-list2">
