Fixed trainer list stacking issue

--- a/WCSTrainer/Pages/Employees/Details.cshtml
+++ b/WCSTrainer/Pages/Employees/Details.cshtml
@@ -17,8 +17,10 @@
         <dd class="col-sm-10">@Html.DisplayFor(model => model.Employee.LastName)</dd>
         <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Employee.Status)</dt>
         <dd class="col-sm-10">@Html.DisplayFor(model => model.Employee.Status)</dd>
-        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Employee.Trainings)</dt>
-        <dd class="col-sm-10">@Html.DisplayFor(model => model.Employee.Trainings)</dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Employee.TrainingOrders)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Employee.TrainingOrders)</dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Employee.Skills)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Employee.Skills)</dd>
         <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Employee.Availability)</dt>
         <dd class="col-sm-10">@Html.DisplayFor(model => model.Employee.Availability)</dd>
     </dl>
