--- a/WCSTrainer/Pages/Employees/Edit.cshtml
+++ b/WCSTrainer/Pages/Employees/Edit.cshtml
@@ -27,9 +27,14 @@
                 <span asp-validation-for="Employee.Status" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Employee.Trainings" class="control-label"></label>
-                <input asp-for="Employee.Trainings" class="form-control" />
-                <span asp-validation-for="Employee.Trainings" class="text-danger"></span>
+                <label asp-for="Employee.TrainingOrders" class="control-label"></label>
+                <input asp-for="Employee.TrainingOrders" class="form-control" />
+                <span asp-validation-for="Employee.TrainingOrders" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Employee.Skills" class="control-label"></label>
+                <input asp-for="Employee.Skills" class="form-control" />
+                <span asp-validation-for="Employee.Skills" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Employee.Availability" class="control-label"></label>
