--- a/WCSTrainer/Pages/Employees/Index.cshtml
+++ b/WCSTrainer/Pages/Employees/Index.cshtml
@@ -14,6 +14,7 @@
                 <a href="Employees" class="selected">Manage Employees</a>
                 <a href="">Account Settings</a>
             </ul>
+            <a asp-page="Create" class="btn btnWhite">Create New Order</a>
         </div>
         <div class="properties">
             <div class="order-list2">
