--- a/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
@@ -41,9 +41,6 @@
                             </div>
                             <div class="selections">
                                 <ul id="trainerList">
-                                    @foreach (string trainerName in Model.TrainingOrder.trainers) {
-                                        <li>@trainerName</li>
-                                    }
                                 </ul>
                             </div>
                             <div class="selectors">
@@ -110,7 +107,6 @@
     var trainList = document.getElementById("trainerList");
     var groupList = document.getElementById("groupList");
     var indiList = document.getElementById("indiList");
-    var testList = document.getElementById("testList");
     var groups = document.getElementById("groups");
     var trainerDanger = document.getElementById("trainerDanger");
   
@@ -135,6 +131,7 @@
     trainList.addEventListener("click", function (event) {
         if (event.target.tagName === "LI") {
             event.target.remove();
+            updateTrainersInput();
         }
     });
 
@@ -154,7 +151,6 @@
         if (!trainList.innerHTML.includes(name)) {
             trainList.innerHTML += "<li>" + name + "</li>";
             updateTrainersInput();
-            testList.textContent = "g";
         }
         groups.selectedIndex = -1;
         individual.selectedIndex = -1;
