--- a/WCSTrainer/Pages/TrainingOrders/Create.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Create.cshtml
@@ -32,7 +32,7 @@
                             </div>
                             <input asp-for="TrainingOrder.trainee" class="form-control" />
                             <input asp-for="TrainingOrder.createDate" type="hidden" value="@Model.day"/>
-                            <input asp-for="TrainingOrder.trainers" type="hidden"/>
+                            <input asp-for="TrainingOrder.trainers" type="hidden" value="a"/>
                             <input asp-for="TrainingOrder.beginDate" type="hidden" value="@Model.day"/>
                             <input asp-for="TrainingOrder.endDate" type="hidden" value="@Model.day"/>
                             <input asp-for="TrainingOrder.status" type="hidden" value="Awaiting Approval"/>
