--- a/WCSTrainer/Pages/Employees/Create.cshtml
+++ b/WCSTrainer/Pages/Employees/Create.cshtml
@@ -5,48 +5,65 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<div class="panel">
+    <div class="body">
 
-<h4>Employee</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Employee.FirstName" class="control-label"></label>
-                <input asp-for="Employee.FirstName" class="form-control" />
-                <span asp-validation-for="Employee.FirstName" class="text-danger"></span>
+        <div class="side-bar">
+            <ul>
+                <a href="">Statistics</a>
+                <a asp-page="./Index" >Training Orders</a>
+                <a asp-page="./Index" class="selected">Manage Employees</a>
+                <a href="">Account Settings</a>
+            </ul>
+        </div>
+
+        <div class="properties">
+            <div class="user-form">
+                <p class="title">Create New Training Order</p>
+                <p class="description">Fill out each required field.</p>
+                <hr />
+                <div class="field-container">
+                    <form method="post">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <div class="form-group">
+                            <div class="labels">
+                                <p class="control-label">First Name*</p>
+                                <span asp-validation-for="Employee.FirstName" class="text-danger"></span>
+                            </div>
+                            <input asp-for="Employee.FirstName" class="form-control" />
+                            <input asp-for="Employee.TrainingOrders" type="hidden" value="a" />
+                            <input asp-for="Employee.Availability" type="hidden" value="a" />
+                        </div>
+                        <div class="form-group">
+                            <div class="labels">
+                                <p class="control-label">Last Name*</p>
+                                <span asp-validation-for="Employee.LastName" class="text-danger"></span>
+                            </div>
+                            <input asp-for="Employee.LastName" class="form-control" />
+                        </div>
+                        <div class="form-group">
+                            <div class="labels">
+                                <p class="control-label">Status*</p>
+                                <span asp-validation-for="Employee.Status" class="text-danger"></span>
+                            </div>
+                            <input asp-for="Employee.Status" class="form-control" />
+                        </div>
+                        <div class="form-group">
+                            <div class="labels">
+                                <p class="control-label">Skills*</p>
+                                <span asp-validation-for="Employee.Skills" class="text-danger"></span>
+                            </div>
+                            <input asp-for="Employee.Skills" class="form-control" />
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="Create" class="btn btnGreen" />
+                        </div>
+                    </form>
+                </div>
+                <a asp-page="Index" class="btn btnBlue">Return To Menu</a>
             </div>
-            <div class="form-group">
-                <label asp-for="Employee.LastName" class="control-label"></label>
-                <input asp-for="Employee.LastName" class="form-control" />
-                <span asp-validation-for="Employee.LastName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Employee.Status" class="control-label"></label>
-                <input asp-for="Employee.Status" class="form-control" />
-                <span asp-validation-for="Employee.Status" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Employee.Trainings" class="control-label"></label>
-                <input asp-for="Employee.Trainings" class="form-control" />
-                <span asp-validation-for="Employee.Trainings" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Employee.Availability" class="control-label"></label>
-                <input asp-for="Employee.Availability" class="form-control" />
-                <span asp-validation-for="Employee.Availability" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
-</div>
-
-<div>
-    <a asp-page="Index">Back to List</a>
 </div>
 
 @section Scripts {
