--- a/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
@@ -86,6 +86,19 @@
                             </div>
                             <input type="date" asp-for="TrainingOrder.endDate" class="form-control" />
                         </div>
+
+                        <div class="form-group">
+                            <div class="labels">
+                                <p class="control-label">Priority Level*</p>
+                                <span asp-validation-for="TrainingOrder.priorityLevel" class="text-danger"></span>
+                            </div>
+                            <select asp-for="TrainingOrder.priorityLevel" class="form-drop2">
+                                <option value="3">3 - High</option>
+                                <option value="2">2 - Medium</option>
+                                <option value="1">1 - Low</option>
+                            </select>
+                        </div>
+
                         <div class="form-group">
                             <input type="submit" value="Save" class="btn btnGreen" />
                         </div>
