--- a/WCSTrainer/Pages/TrainingOrders/Create.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Create.cshtml
@@ -70,6 +70,20 @@
                             </div>
                             <input asp-for="TrainingOrder.duration" class="form-control" />
                         </div>
+
+                        <div class="form-group">
+                            <div class="labels">
+                                <p class="control-label">Priority Level*</p>
+                                <span asp-validation-for="TrainingOrder.priorityLevel" class="text-danger"></span>
+                            </div>
+                            <select asp-for="TrainingOrder.priorityLevel" class="form-drop2">
+                                <option value="3">3 - High</option>
+                                <option value="2">2 - Medium</option>
+                                <option value="1">1 - Low</option>
+                            </select>
+                        </div>
+
+
                         <div class="form-group">
                             <div class="labels">
                                 <p class="control-label">Description</p>
